<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_margin="@dimen/elevation_app_bar"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_heght"
            android:background="@drawable/bgcolor"
            android:scaleType="centerCrop"
            android:contentDescription="@string/mavel_image"/>

        <TextView
            android:id="@+id/title"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:ellipsize="end"
            android:maxLines="2"
            android:lineSpacingMultiplier="0.9"
            tool:text="title"
            android:contentDescription="@string/marvel_title"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_vertical_margin_half">
            
            <Button
                android:id="@+id/like_button"
                android:layout_width="@dimen/activity_padding_top"
                android:layout_height="@dimen/activity_padding_top"
                android:background="@drawable/ic_action_like"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/download_button"
                android:layout_marginEnd="@dimen/activity_vertical_margin_half"
                android:contentDescription="@string/like"/>
            <Button
                android:id="@+id/download_button"
                android:layout_width="@dimen/activity_padding_top"
                android:layout_height="@dimen/activity_padding_top"
                android:background="@drawable/ic_action_download"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@+id/share_button"
                android:layout_marginEnd="@dimen/activity_vertical_margin_half"
                android:contentDescription="@string/download"/>
            <Button
                android:id="@+id/share_button"
                android:layout_width="@dimen/activity_padding_top"
                android:layout_height="@dimen/activity_padding_top"
                android:background="@drawable/ic_action_name"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/activity_vertical_margin_half"
                android:contentDescription="@string/share"/>

        </RelativeLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
